// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DataSources should merge dataSource arrays 1`] = `
Array [
  Object {
    "name": "myDataSource",
    "type": "NONE",
  },
  Object {
    "name": "myOtherDataSource",
    "type": "NONE",
  },
  Object {
    "name": "otherNamedDs",
    "type": "NONE",
  },
  Object {
    "name": "anotherNamedSource",
    "type": "NONE",
  },
]
`;

exports[`DataSources should resolve dataSource names 1`] = `
Array [
  Object {
    "name": "myDataSource",
    "type": "NONE",
  },
  Object {
    "name": "myOtherDataSource",
    "type": "NONE",
  },
]
`;

exports[`Pipeline Functions should merge function arrays 1`] = `
Array [
  Object {
    "dataSource": "users",
    "name": "function1",
  },
  Object {
    "dataSource": "users",
    "name": "myFunction2",
  },
  Object {
    "dataSource": "users",
    "name": "function3",
  },
  Object {
    "dataSource": "users",
    "name": "myFunction4",
  },
]
`;

exports[`Pipeline Functions should resolve functions names 1`] = `
Array [
  Object {
    "dataSource": "users",
    "name": "function1",
  },
  Object {
    "dataSource": "users",
    "name": "myFunction2",
  },
]
`;

exports[`Resolvers should merge resolvers arrays 1`] = `
Array [
  Object {
    "dataSource": "users",
    "field": "getUser",
    "type": "Query",
  },
  Object {
    "dataSource": "users",
    "field": "getUsers",
    "type": "Query",
  },
  Object {
    "field": "pipeline",
    "functions": Array [
      "function1",
      "function2",
    ],
    "kind": "PIPELINE",
    "type": "Query",
  },
  Object {
    "dataSource": "posts",
    "field": "getPosts",
    "type": "Query",
  },
  Object {
    "dataSource": "posts",
    "field": "getPosts",
    "type": "Query",
  },
  Object {
    "field": "getUsers",
    "functions": Array [
      "function1",
      "function2",
    ],
    "kind": "PIPELINE",
    "type": "Query",
  },
]
`;

exports[`Resolvers should resolve resolver type and fields 1`] = `
Array [
  Object {
    "dataSource": "users",
    "field": "getUser",
    "type": "Query",
  },
  Object {
    "dataSource": "users",
    "field": "getUsers",
    "type": "Query",
  },
]
`;

exports[`Schema should return a schema array unchanged 1`] = `
Array [
  "users.graphql",
  "posts.graphql",
]
`;

exports[`Schema should return a single schema as an array 1`] = `
Array [
  "mySchema.graphql",
]
`;

exports[`Schema should return the default schema 1`] = `
Array [
  "schema.graphql",
]
`;

exports[`returns basic config 1`] = `
Object {
  "additionalAuthenticationProviders": Array [],
  "apiKeys": Array [
    Object {
      "description": "Auto-generated api key",
      "name": "Default",
    },
  ],
  "authentication": Object {
    "type": "API_KEY",
  },
  "dataSources": Array [],
  "mappingTemplatesLocation": Object {
    "pipelineFunctions": "mapping-templates",
    "resolvers": "mapping-templates",
  },
  "name": "My Api",
  "pipelineFunctions": Array [],
  "resolvers": Array [],
  "schema": Array [
    "schema.graphql",
  ],
}
`;
